@@ -241,6 +241,8 @@ glibc (2.3.2-1) unstable; urgency=low
       gcc-3.2 for libc6-dev-sparc64. Add lib64gcc1 as a dep for libc6-sparc64.
     - Use CC for building sparc64 libs.
     - Remove build-dep for gcc-3.3 on sparc.
+    - Really fix devpts.sh so that it mounts devpts whenever devpts is
+      available and not mounted.
 
  -- GOTO Masanori <gotom@debian.or.jp>  Sun, 23 Mar 2003 02:39:58 +0900
 
